# vbrcc

./: .gitignore  Cargo.toml  README.md  input.c  output
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  architecture.md
examples/: README.md  input.c  matrix_test.c  reverse_string.c  test.c
src/: assembler_driver.rs  ast.rs  codegen.rs  diagnostic.rs  lexer.rs  lib.rs  main.rs  parser.rs  typeck.rs
src/assembler/: Cargo.toml  coff.rs  encoder.rs  instruction.rs  mod.rs  pe.rs  register.rs  relocation.rs
src/assembler/src/: coff.rs  encoder.rs  instruction.rs  main.rs  pe.rs  register.rs  relocation.rs
tests/: assembler_test.rs  diagnostics.rs  entry_point.rs  full_compilation.rs  lexer_pipeline.rs  lld_link_test.rs  parser_pipeline.rs  pointers.rs  test.s
