[package]
name = "vbrcc"
version = "0.4.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A small C compiler with a hand-written x86-64 assembler and PE/COFF backend"
repository = "https://github.com/obijunior/vbrcc"
readme = "README.md"
keywords = ["compiler", "c", "x86-64", "assembler"]
categories = ["compilers"]

[profile.release]
strip = true
lto = true          
codegen-units = 1 